--- a/package.json
+++ b/package.json
@@ -1,25 +1,10 @@
 {
-  "name": "react-rmj-starter",
-  "private": true,
-  "version": "0.0.1",
-  "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview"
-  },
-  "dependencies": {
-    "@siimple/preset-ice": "^0.2.3",
-    "@xstate/react": "^3.0.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "siimple": "^4.2.3",
-    "xstate": "^4.32.1"
-  },
-  "devDependencies": {
-    "@types/react": "^18.0.15",
-    "@types/react-dom": "^18.0.6",
-    "@vitejs/plugin-react": "^2.0.0",
-    "vite": "^3.0.0"
-  }
+    "private": true,
+    "name": "practices-monorepo",
+    "workspaces": [
+        "packages/*"
+    ],
+    "scripts": {
+        "dev": "yarn workspace"
+    }
 }
