--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "private": true,
     "name": "practices-monorepo",
     "workspaces": [
-        "packages/*"
+        "apps/*"
     ],
     "scripts": {
         "dev": "yarn workspace"
